--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -97,6 +97,11 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    
     defaultConfig {
         applicationId "com.webrctexample"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -137,6 +142,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-webrtc')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
