--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   "dependencies": {
     "react": "16.5.0",
     "react-native": "0.57.0",
-    "react-native-webrtc": "^1.67.1"
+    "react-native-webrtc": "^1.67.1",
+    "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "@babel/plugin-external-helpers": "^7.0.0",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.45.4",
-    "react-test-renderer": "16.5.0"
+    "react-test-renderer": "16.5.0",
+    "reactotron-react-native": "^2.1.0"
   },
   "jest": {
     "preset": "react-native"
